# AEGIS

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  cache_sim.py  dashboard.py  hamming_power_sim.py  inspect_data.py  pyproject.toml
data/: live_plaintexts.npy  live_traces.npy  plaintexts.npy  traces.npy
frontend/: about.html  aegis_runner.py  home.html  index.html  script.js  simulations.html  style.css  styles.css
sims/: cache_sim.py  hamming_power_sim.py  timing_sim.py
src/aegis/: __init__.py  main.py
tests/: test_main.py
