[project]
name = "aegis"
version = "0.1.0"
description = "AEGIS - A Python application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pre-commit>=4.5.1",
]

[project.scripts]
aegis = "aegis.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pylint>=4.0.4",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
